@@ -1,3 +1,7 @@
+2008-01-17 Ian Rutt
+ * Fixed build problem with restarts (added handling of complex arrays)
+ * This is currently untested.
+
 2008-01-16 Ian Rutt
  * Modified configure.in and bootstrap to reflect Magi's changes to main
    trunk. These allow configuration with later versions of automake
